[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langsmith-fetch"
version = "0.1.0"
description = "LangSmith Fetch - Minimal CLI for fetching LangSmith threads and traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
langsmith-fetch = "langsmith_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_cli"]
